fix dark mode md img

--- a/packages/frontend/src/styles/markdown.css
+++ b/packages/frontend/src/styles/markdown.css
@@ -102,5 +102,9 @@
 
 /* Make sure this is compatible with the <Link /> component */
 .mdc a {
-  @apply font-semibold text-blue-700 underline transition-colors hover:text-blue-550 dark:text-blue-500 dark:hover:text-blue-550;
+  @apply font-medium text-blue-700 underline transition-colors hover:text-blue-550 dark:text-blue-500 dark:hover:text-blue-550;
+}
+
+.mdc img {
+  @apply dark:invert inline max-w-full align-[unset];
 }
